# scratch

./: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
app/: Main.hs
module-exp/: Cargo.toml
module-exp/src/: main.rs
module-exp/src/lib/: lib_mod.rs  mod.rs
module-exp/tests/: integration-tests.rs
scratch-hs/: Parser  Parser.hi  Parser.hs  Parser.info  Parser.y  ParserData.hs  README.md  package.yaml
scratch-hs/app/: Main.hs
scratch-rs/: main.rs
scratch-rs/mysort/src/: main.rs
scratch-rs/typechecker/: Cargo.toml  tags
scratch-rs/typechecker/parser-generator/calculator/: Cargo.toml
scratch-rs/typechecker/parser-generator/calculator/src/: calculator.lalrpop  calculator.rs  main.rs  types.rs
scratch-rs/typechecker/src/: attributes.rs  constraint_parser.lalrpopr  constraint_parser.rs  instruction.lalrpop  instruction.lalrpopr  instruction.rs  instructions.rs  main.rs  parser.lalrpop  parser.rs  parsers.rs  typechecker.rs  types.rs
scratch-rs/typechecker/src/tests/: tests.rs
src/: Money.hs
typechecker/: Cargo.toml
typechecker/src/: attributes.rs  instructions.rs  main.rs  parser.lalrpop  parser.rs  parsers.rs  typechecker.rs  types.rs
typechecker/src/lib/: attributes.rs  mod.rs  parser.lalrpop  parser.rs  typechecker.rs  types.rs
typechecker/src/tests/: tests.rs
typechecker/tests/: tests.rs
