[package]
name = "typechecker"
version = "0.1.0"
edition = "2021"

[lib]
name = "typechecker"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
regex = "1.9.3"

[profile.release]
debug = true
